@@ -24,14 +24,13 @@ my $tzil = Builder->from_config(
 $tzil->build;
 
 my $VERSION = Dist::Zilla::Plugin::ModuleBuildTiny->VERSION || '<self>';
-my $mbt_version = Module::Metadata->new_from_module('Module::Build::Tiny')->version;
 my $expected = <<"END";
 # This Build.PL for DZT-Sample was generated by Dist::Zilla::Plugin::ModuleBuildTiny $VERSION.
 use strict;
 use warnings;
 
 use $];
-use Module::Build::Tiny $mbt_version;
+use Module::Build::Tiny 0.007;
 Build_PL();
 END
 
@@ -39,7 +38,7 @@ is($tzil->built_in->file('Build.PL')->slurp, $expected, 'Build.PL is exactly lik
 
 my $meta = CPAN::Meta->load_file($tzil->built_in->file('META.json'), { lazy_validation => 0 });
 my $configure_requires = $meta->effective_prereqs->requirements_for('configure', 'requires')->as_string_hash;
-is_deeply($configure_requires, { 'Module::Build::Tiny' => $mbt_version }, 'configure requires' );
+is_deeply($configure_requires, { 'Module::Build::Tiny' => '0.007' }, 'configure requires' );
 
 done_testing;
 
