@@ -22,14 +22,13 @@ my $tzil = Builder->from_config(
 $tzil->build;
 
 my $VERSION = Dist::Zilla::Plugin::ModuleBuildTiny->VERSION || '<self>';
-my $mbt_version = Module::Metadata->new_from_module('Module::Build::Tiny')->version;
 my $expected = <<"END";
 # This Build.PL for DZT-Sample was generated by Dist::Zilla::Plugin::ModuleBuildTiny $VERSION.
 use strict;
 use warnings;
 
 use 5.010;
-use Module::Build::Tiny $mbt_version;
+use Module::Build::Tiny 0.007;
 Build_PL();
 END
 
