@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-ModuleBuildTiny
 
 {{$NEXT}}
+          Switch default to conservative version logic
 
 0.010     2015-03-27 14:36:24+01:00 Europe/Amsterdam
           Bump a prereq to avoid meta validation issues
